Thu Nov 22 23:22:30 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java: Move detection of invalid CAD faces
	into src/org/jcae/mesh/amibe/algos2d/Initial.java

Thu Nov 22 12:37:13 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/patch/Calculus.java (distance2): Modify
	signature, this may be needed to improve SmoothNodes2D.
	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Rename getQuadTree()...
	* src/org/jcae/mesh/amibe/ds/Mesh.java: into getKdTree()...
	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Rename resetQuadTree()...
	* src/org/jcae/mesh/amibe/ds/Mesh.java: into resetKdTree()...
	* src/org/jcae/mesh/amibe/ds/MMesh1D.java: Remove maxLength and
	maxDeflection members, mesh specifications are now passed to 1D
	algorithms through a Map.
	* src/org/jcae/mesh/amibe/ds/MeshParameters.java: New class, this is
	a container for mesh parameters.  Static members have been removed
	from Mesh, Metric2D and Metric3D classes and gathered into this one.

Thu Nov 22 10:53:13 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshWriter.java: In writeObject() and
	writeObject3D() methods, replace HashSet+ArrayList pair by a
	LinkedHashSet instance.
	* src/org/jcae/mesh/Mesher.java
	  src/org/jcae/mesh/bora/algo/Basic2d.java: Do not call
	Mesh2D.removeDegeneratedEdges() before writing jcae2d files.
	All 2D algorithms can safely be applied to meshes loaded from disk.
	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObjectNodes): 
	Due to change just above, 2D nodes which represent the same
	topological vertex are now all written onto disk.  But these
	duplicates are written at the end of the file so that they
	can be ignored when converting into 3D.
	* src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java
	  src/org/jcae/mesh/bora/xmldata/Storage.java: When reading 2D
	triangles, ignore triangles which are bound to a degenerated edge.
	Duplicate nodes were already ignored.