@@ -438,7 +438,7 @@ public class SmoothNodes3D
 		new SmoothNodes3D(mesh, opts).compute();			
 		try
 		{
-			MeshWriter.writeObject3D(mesh, args[argc+1], "jcae3d", ".", "dummy.brep");
+			MeshWriter.writeObject3D(mesh, args[argc+1], "jcae3d", "dummy.brep");
 		}
 		catch (IOException ex)
 		{
